@@ -123,7 +123,8 @@ enum line_edit_status
   line_edit_signalled = -1,
   line_edit_ok = 0,
   line_edit_input_done = 1,
-  line_edit_error = 2
+  line_edit_error = 2,
+  line_edit_pipe_full = 3
 };
 
 enum bg_check_types
